--- a/style/index.css
+++ b/style/index.css
@@ -36,6 +36,26 @@ img {
   height: 300px;
   border-radius: 15px;
 }
+.like__button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 1.7rem;
+  display: flex;
+  width: 100%;
+  height: 31px;
+  border: 1px solid #bfbfbf;
+  background-color: transparent;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: #888888;
+}
+.like__button:hover {
+  background-color: #d99191;
+  color: #fff;
+  border: none;
+}
 
 .update__btn {
   display: grid;
@@ -58,6 +78,27 @@ img {
   background-color: #424860;
   color: #fff;
 }
+.favorite__images{
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+  object-fit: cover;
+  place-content: center;
+  grid-auto-flow: row;
+  margin-top: 4.5rem;
+  gap: 1.2rem;
+}
+.favorite__images--content{
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+  object-fit: cover;
+  place-content: center;
+  grid-auto-flow: row;
+  margin-top: 4.5rem;
+  gap: 1.2rem;
+}
+
 
 @media (max-width: 500px) {
   .main__container {
@@ -66,12 +107,12 @@ img {
     grid-template-rows: repeat(2, auto);
     gap: 0.8rem;
   }
-  img{
+  img {
     max-width: 16rem;
     height: 16rem;
     border-radius: 15px;
   }
-  .update__btn{
-      margin-top: 2rem;
+  .update__btn {
+    margin-top: 2rem;
   }
 }
